--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - dev
+      - release/*
 jobs:
     Deployment: 
         runs-on: ubuntu-latest
@@ -16,3 +17,7 @@ jobs:
 
             - name: Build Next.js app
               run: npm run build
+              
+            - name: Run Tests
+              run: npm run test
+              
