--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,5 +19,5 @@ jobs:
               run: npm run build
               
             - name: Run Tests
-              run: npm test
+              run: jest --passWithNoTests
               
