--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,11 @@ jobs:
         steps:
             - name: Checkout code
               uses: actions/checkout@v4
+              
+            - name: Install Node.js
+              uses: actions/setup-node@v2
+              with:
+                node-version: "20"
 
             - name: Install dependencies
               run: npm install
@@ -19,5 +24,5 @@ jobs:
               run: npm run build
               
             - name: Run Tests
-              run: jest --passWithNoTests
+              run: npm run test
               
