--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --passWithNoTests",
+    "test": "jest --passWithNoTests"
   },
   "dependencies": {
     "react": "^18",
@@ -22,6 +22,6 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0"
   }
 }
